# karteczki-c

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  Tuprules.tup  box.c  box.h  boxtest.c  boxtest.h  eclipse-formatter.xml  id.c  id.h  idtest.c  idtest.h  karteczki.cbp  karteczki.cpp  karteczki.depend  karteczki.go  karteczki.layout  karteczki.workspace  karteczki.workspace.layout  karteczkitest.c  karteczkitest.cbp  karteczkitest.depend  karteczkitest.layout
.externalToolBuilders/: tup.launch
box/: box.go  box_test.go
core/: .cproject  .project  Box.cpp  Box.h  Tupfile
core-test/: .cproject  .project  BoxTest.cpp  BoxTest.h  Tupfile
core-test/src/: BoxTest.h  core-test.cpp
core/src/: Box.h
events/: .cproject  .project  DomainEvents.cpp  DomainEvents.h  Event.h  EventHandler.h  Tupfile  events.go
events-test/: DomainEventsTest.cpp  DomainEventsTest.h  StubEventHandler.h
events/src/: DomainEvents.h  Event.h  EventHandler.cpp  EventHandler.h
gtest/: .cproject  .project  Tupfile
gtest/src/: gtest-all.cc
id/: Id.cpp  Id.h  Tupfile
id-test/: IdTest.cpp  IdTest.h  Tupfile
quiz/: quiz.go
tests/: Tupfile  tests.cpp
